overlays/dev/scheduling.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: connectme}
spec:
  template:
    spec:
      nodeSelector: {workload: dev}
      tolerations:
        - {key: dr, operator: Exists, effect: NoSchedule}
        - {key: dedicated, operator: Equal, value: dev, effect: NoSchedule}
